tests/specs/test/hooks_unhandled_rejection/main.out
Check file:///Users/ib/dev/deno/tests/specs/test/hooks_unhandled_rejection/main.ts
running 1 test from ./main.ts
test with unhandled rejection in beforeEach ...
Uncaught error from ./main.ts FAILED
test with unhandled rejection in beforeEach ... cancelled ([WILDCARD])

 ERRORS 

./main.ts (uncaught error)
error: (in promise) Error: Unhandled rejection in beforeEach
  Promise.reject(new Error("Unhandled rejection in beforeEach"));
                 ^
    at Object.fn (file:///Users/ib/dev/deno/tests/specs/test/hooks_unhandled_rejection/main.ts:12:18)
This error was not caught from a test and caused the test runner to fail on the referenced module.
It most likely originated from a dangling promise, event/timeout handler or top-level code.

 FAILURES 

./main.ts (uncaught error)

FAILED | 0 passed | 2 failed ([WILDCARD])